[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.20.0"
tokio = {version = "1.32.0", features = ["full"]}
dashmap = "5.5.3"
ropey = "1.6.0"
tree-sitter = "0.20.10"
tree-sitter-java = "0.20.0"
tree-sitter-traversal = "0.1.2"
log = "0.4"
env_logger = "0.9"

[build-dependencies]
cc = "*"
